# gitmoji-lint

./: .pre-commit-hooks.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: sync_upstream.yaml
gitmoji_lint/: cli.py  gitmoji_convention.py
gitmoji_lint/data/: gitmojis.json
gitmoji_lint/tests/: test_cli.py  test_gitmoji_linter.py
tools/: sync_upstream.py
